change playbook config

--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: local
+- name: workstation configuration
+  hosts: localhost
   connection: local
   vars:
     ohmyzsh_installer: ~/.ohmyzsh-install.sh
