--- a/roles/oh-my-zsh/tasks/main.yml
+++ b/roles/oh-my-zsh/tasks/main.yml
@@ -9,10 +9,10 @@
     mode: 0755
     owner: '{{user}}'
     group: '{{user}}'
-  when: not omzconfig.stat.exists=false
+  when: not omzconfig.stat.exists
 - name: install oh-my-zsh
   command: '{{ohmyzsh_installer}}'
-  when: not omzconfig.stat.exists=false
+  when: not omzconfig.stat.exists
 - name: change user shell to zsh
   become: yes
   user:
@@ -23,10 +23,10 @@
     repo: 'https://github.com/romkatv/powerlevel10k.git'
     dest:  '~/.oh-my-zsh/custom/themes/powerlevel10k'
     depth: 1
-  when: not omzconfig.stat.exists=false
+  when: not omzconfig.stat.exists
 - name: set p10k theme
   lineinfile:
     path: ~/.zshrc
     regexp: '^ZSH_THEME='
     line: 'ZSH_THEME="powerlevel10k/powerlevel10k"'
-  when: not omzconfig.stat.exists=false
+  when: not omzconfig.stat.exists
