--- a/roles/update-all/tasks/main.yml
+++ b/roles/update-all/tasks/main.yml
@@ -5,3 +5,11 @@
     upgrade: dist
     autoclean: yes
     autoremove: yes
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' or ansible_distribution == 'Pop!_OS'
+- name: update all packages
+  become: yes
+  dnf:
+    name: "*"
+    state: latest
+    update_cache: true
+  when: ansible_distribution == 'Fedora'
