--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -3,3 +3,10 @@
   apt:
     name: zsh
     update_cache: true
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' or ansible_distribution == 'Pop!_OS'
+- name: install zsh
+  become: yes
+  dnf:
+    name: zsh
+    update_cache: true
+  when: ansible_distribution == 'Fedora'
