--- a/profile/tasks/main.yml
+++ b/profile/tasks/main.yml
@@ -2,7 +2,7 @@
 - include_tasks: zshrc.yml
 - name: load ssh agent in profile
   lineinfile:
-    path: '{{user_home}}/.zshrc'
+    path: '{{user_home}}/.profile'
     insertbefore: BOF
     line: 'if [ -z "$SSH_AUTH_SOCK" ] ; then eval $(ssh-agent -s);  grep -slR "PRIVATE" ~/.ssh/ | xargs ssh-add; fi'
     state: present
