--- a/roles/dotnet-sdk/tasks/main.yml
+++ b/roles/dotnet-sdk/tasks/main.yml
@@ -15,9 +15,9 @@
   when: not dotnet_path.stat.exists
 - name: add dotnet to $PATH
   become: true
-  copy:
-    dest: /etc/profile.d/dotnet-path.sh
-    content: "PATH=$PATH:{{user_home}}/.dotnet/"
+  lineinfile:
+    path: "{{user_home}}/.profile"
+    line: "PATH=$PATH:{{user_home}}/.dotnet/"
   when: not dotnet_path.stat.exists
 - name: remove dotnet install script
   file:
