--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -1,16 +1,16 @@
 - name: install packages
-  become: yes
+  become: true
   apt:
     name: "{{item}}"
     state: present
     update_cache: yes
-  loop: "{{package_list}}"
+  loop: "{{package_list_debian}}"
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' or ansible_distribution == 'Pop!_OS'
 - name: install packages
-  become: yes
+  become: true
   dnf:
     name: "{{item}}"
     state: present
     update_cache: yes
-  loop: "{{package_list}}"
+  loop: "{{package_list_redhat}}"
   when: ansible_distribution == 'Fedora'
